--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.12",
     "autoprefixer": "^10.4.7",
     "create-react-component-folder": "^0.3.7",
     "postcss": "^8.4.14",
